--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^5.1.0",
     "jimp": "^0.16.1",
     "multer": "^1.4.5-lts.2",
+    "p-limit": "^6.2.0",
     "pdf-parse": "^1.1.1",
     "pdf-poppler": "^0.2.1",
     "pdf2pic": "^3.1.4",
